Fix : 보조지표 null값 처리 - 보조지표에서 반환하는 null값 처리로직 반영